                        Current Project Changelog
* Wed Feb 16 2005 Jack Neely <jjneely@gmail.com>
- Current 1.5.11
- ConstructParser is gone in favor of headerParser to parse the list-like
  strings from the up2date clients.  Much cleaner.
- If filesystems bits of cadmin scan_channel blow up the database transaction
  that is part of that operation are rolled back.  This leaves Current in
  the same state that it was before the scan_channel command
- traceback during RPM delete code when using PostgreSQL fixed
- Documentation for 1.6 is hopefully much more in shape.  Looking for
  contributors here
- MySQL support -- Pauline Middelink
- solveDependancy() fixes -- Pauline Middelink
- patch for parent channels -- Pauline Middelink
- Catch cases where rpmnlib can return None in a specific planetary
  alignment

* Wed Jan 05 2005 Jack Neely <jjneely@gmail.com>
- Current 1.5.10
- Fix brown paper bag bug in .9 so you can add directories to channels

* Sun Jan 02 2005 Jack Neely <jjneely@gmail.com>
- Current 1.5.9
- Major schema change to incorperate all RPM dependancy information
  into one table called DEPENDANCIES
- Code cleanup especially since the schema change allowed me to make
  certain things simpler
- Lots of logging tweaks to make logging sane.  
- Removed all assert statements from the DB layer.  Using proper
  exceptions/if/then/else error checking
- Support for multiple channels containing an overlapping set of
  directories.  When one channel is scanned it will detect and re-scan
  any possibly stale channels
- Code that removes entries from the DB checks for possible referrences
  to rows that are not required to be unqiue.  Fixes database corruption.
- solveDependancies() now checks for file dependancies instead of only
  provides.
- Fixed support for the throbber.  Note that the throbber is configured
  seprately from up2date and you'll need to add the "use_ca_cert"
  option.
- Ripped out a large chunk of the code that handles the configuration in