@@ -5,7 +5,7 @@
 
 Summary: A server for Red Hat's up2date tools.
 Name: current
-Version: 1.5.11
+Version: 1.5.91
 Release: 1
 License: GPL
 Group: System Environment/Daemons
