@@ -37,6 +37,11 @@ several hundred machines without driving the sysadmins mad.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[27 Feb 2005] Current 1.6.0 Release Canidate 1</b>
+    <p>Also known as version 1.5.91.  This is the first release canidate
+    for 1.6.0.  Please beat on this.  The 1.6.x line is considered frozen
+    and only bug fixes will be accepted.</p></li>
+
     <li><b>[20 Feb 2005] Current Version 1.5.11</b>
     <p>MySQL support and lots of bug fixes.  Updated <a href="faq.html">FAQ</a>
     too.  Last 1.5.x version!  On to 1.6!</p></li>
