@@ -3,6 +3,6 @@
 </head>
 
 <body>
-    Development Version is 1.5.11, New Stable Version 1.6.0 Coming Soon
+    Development Version is 1.5.91 AKA Current 1.6.0 Release Canidate 1
 </body>
 </html>
